<resources>
    <string name="app_name">Smart Fishing</string>

    <string name="addon_navi">PETA IKAN</string>
    <string name="course">arah</string>
    <string name="wind_direction_s">S</string>
    <string name="wind_direction_w">B</string>
    <string name="wind_direction_n">U</string>
    <string name="wind_direction_e">T</string>
    <string name="south">Selatan</string>
    <string name="east">Timur</string>
    <string name="west">Barat</string>
    <string name="north">Utara</string>
    <string name="north_west">Barat Laut</string>
    <string name="south_west">barat daya</string>
    <string name="south_east">Tenggara</string>
    <string name="north_east">Timur Laut</string>
    <string name="wind_direction_nw">BU</string>
    <string name="wind_direction_sw">SB</string>
    <string name="wind_direction_se">ST</string>
    <string name="wind_direction_ne">TU</string>

    <string name="input_logbook">Masukan Hasil Tangkap</string>
    <string name="message" translatable="true">Pesan</string>
    <string name="capture_data" >Data Hasil Tangkap</string>
    <string name="select_fish_name" translatable="true">Pilih Nama Ikan</string>
    <string name="find_fish" translatable="true">Cari Ikan</string>
    <string name="edit_time_and_date" translatable="true">Ubah tanggal dan waktu</string>
    <string name="select_date" translatable="true">Pilih Tanggal</string>
    <string name="select_time" translatable="true">Pilih Waktu</string>
    <string name="save" translatable="true">Simpan</string>
    <string name="cancel" translatable="true">Batal</string>
    <string name="find" translatable="true">Cari</string>
    <string name="send_first_message" translatable="true">Kirim pesan pertama</string>
    <string name="add_vma_contact" translatable="true">Tambah Kontak VMA</string>
    <string name="ship_name" translatable="true">Nama Kapal</string>
    <string name="ship_id" translatable="true">ID Kapal</string>
    <string name="delete_history" translatable="true">Hapus Riwayat</string>
    <string name="silent_notification" translatable="true">Senyapkan Notifikasi</string>
    <string name="delete_contact" translatable="true">Hapus Kontak</string>
    <string name="edit_contact" translatable="true">Hapus Kontak</string>
    <string name="setting" translatable="true">Pengaturan</string>
    <string name="brightness" translatable="true">Kecerahan</string>
    <string name="display" translatable="true">Tampilan</string>
    <string name="about_vma" translatable="true">Tentang Smartfishing</string>
    <string name="version_info" translatable="true">Informasi Versi</string>
    <string name="information" translatable="true">Informasi</string>
    <string name="term_to_use" translatable="true">Ketentuan Penggunaan</string>
    <string name="light_mode" translatable="true">Mode Terang</string>
    <string name="dark_mode" translatable="true">Mode Gelap</string>
    <string name="language" translatable="true">Bahasa</string>
    <string name="theme_color" translatable="true">Warna Tema</string>
    <string name="navigation_and_display_bar" translatable="true">Navigasi dan Warna Tampilan Bar</string>
    <string name="coordinate_format" translatable="true">Format Koordinat</string>
    <string name="automatic" translatable="true">Otomatis</string>
    <string name="show" translatable="true">Tampilkan</string>
    <string name="hide" translatable="true">Sembunyikan</string>
    <string name="decimal_seconds" translatable="true">Desimal Detik</string>
    <string name="decimal_minutes" translatable="true">Desimal Menit</string>
    <string name="decimal_degree" translatable="true">Desimal Derajat</string>
    <string name="yes" translatable="true">Ya</string>
    <string name="attention" translatable="true">Perhatian</string>
    <string name="wifi_connection_attention" translatable="true">Perangkat anda tidak terhubung dengan layanan internet.\nHarap aktifkan koneksi Wifi anda</string>
    <string name="pleaseWait" translatable="true">Mohon menunggu</string>
    <string name="checkUpdate" translatable="true">Periksa Pembaharuan</string>
    <string name="updateAvailable" translatable="true">Perubahan Tersedia</string>
    <string name="update" translatable="true">Perbaharui</string>
    <string name="updated" translatable="true">Diperbaharui</string>
    <string name="aboutVma" translatable="true">Tentang VMA</string>
    <string name="ownerName" translatable="true">Nama Pemilik</string>
    <string name="catchingTools" translatable="true">Alat Tangkap</string>
    <string name="AreYouInEmergency" translatable="true">Apakah anda dalam\nkondisi Darurat?</string>
    <string name="pleaseClickRedButton" translatable="true">Silahkan tekan tombol di bawah ini.\nBantuan akan segera datang</string>
    <string name="sending" translatable="true">Sedang Mengirim</string>
    <string name="date" translatable="true">Tanggal</string>
    <string name="location" translatable="true">Lokasi</string>
    <string name="unknown" translatable="true">Tidak diketahui</string>
    <string name="time" translatable="true">Waktu</string>
    <string name="sent" translatable="true">Terkirim</string>
    <string name="weather" translatable="true">Cuaca</string>
    <string name="today" translatable="true">Hari ini</string>
    <string name="speed_and_wind_direcrtion" translatable="true">Kecepatan &amp; arah angin</string>
    <string name="wave_height" translatable="true">Tinggi Ombak</string>
    <string name="tomorrow" translatable="true">Besok</string>
    <string name="ship_coordinate" translatable="true">Koordinat Kapal</string>
    <string name="speed" translatable="true">Kecepatan</string>
    <string name="record" translatable="true">Rekam</string>
    <string name="no" translatable="true">Tidak</string>
    <string name="are_you_sure_to_save_record_tracking" translatable="true">Anda yakin akan menyimpan rekam perjalanan ?</string>
    <string name="track_name" translatable="true">Nama Track</string>
    <string name="Distance" translatable="true">Jarak</string>
    <string name="Start" translatable="true">Mulai</string>
    <string name="End" translatable="true">Selesai</string>
    <string name="delete_track" translatable="true">Hapus Track</string>
    <string name="edit_track" translatable="true">Ubah Track</string>
    <string name="check_map_version" translatable="true">Cek Versi Map</string>
    <string name="heading" translatable="true">Haluan</string>
    <string name="destination_position" translatable="true">Posisi Tujuan</string>
    <string name="destance_from_position" translatable="true">Jarak dari kapal</string>
    <string name="direct_to" translatable="true">Menuju Lokasi</string>
    <string name="save_location" translatable="true">Simpan Lokasi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_required">Password *</string>
    <string name="donot_have_account">Belum memiliki Akses ?</string>
    <string name="register">Registrasi</string>
    <string name="user_id">User ID</string>
    <string name="required">Harus diisi</string>
    <string name="user_access">Akses Pengguna</string>
    <string name="identity_owner">Identitas Pemilik &amp; Kapal</string>
    <string name="phone">Nomor Handphone</string>
    <string name="address">Alamat</string>
    <string name="ship_photo">Foto Kapal</string>
    <string name="confirm">Konfirmasi</string>
    <string name="TrackingList">List Track</string>
    <string name="are_you_sure_logout">Anda yakin untuk logout</string>
    <string name="fish_potential_area">Daerah Potrensi Ikan Pelagis</string>
    <string name="dpip">DPID</string>
    <string name="permission">Yukom Akses</string>
    <string name="location_name">Nama Lokasi</string>
    <string name="saved_location">Lokasi Tersimpan</string>
    <string name="saved_track">Track Tersimpan</string>
    <string name="goto_location">Menuju Lokasi</string>
    <string name="edit_location">Ubah Lokasi</string>
    <string name="edit_name">Ubah Name</string>
    <string name="delete">Hapus</string>
    <string name="delete_logbook">Hapus Logbook</string>
    <string name="move_location">Pindah Lokasi Tujuan</string>
    <string name="add_location">Tambah Lokasi Tujuan</string>
    <string name="are_you_sure_to_delete_track">Anda yakin untuk menghapus track #X1 dari daftar</string>
    <string name="are_you_sure_to_delete_location">Anda yakin untuk menghapus lokasi #X1 dari daftar</string>
    <string name="are_you_sure_to_delete_logbook">Anda yakin untuk menghapus data #X1 dari daftar logbook</string>
    <string name="success">Proses Berhasil</string>
    <string name="add">Tambah</string>
    <string name="route_name">Nama Rute</string>
    <string name="close_route">Tutup Rute</string>
    <string name="position">Posisi</string>
    <string name="starting_point">Titik Awal</string>
    <string name="end_point">Titik Akhir</string>
    <string name="duration_time">Durasi Waktu</string>
    <string name="e_logbook">E-Logbook</string>
    <string name="fish_type">Jenis Ikan</string>
    <string name="unit">Satuan</string>
    <string name="quantity">Jumlah</string>
    <string name="xb0" translatable="false">°</string>
    <string name="symbol_minutes" translatable="false">\'\'</string>
    <string name="symbol_seconds" translatable="false">\'</string>
    <string name="distance_unit">Satuan Jarak</string>
    <string name="speed_unit">Satuan Kecepatan</string>
    <string name="profile">Profile</string>
    <string name="account">Akun</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="backround_access_info">Smartfishing membutuhkan akses lokasi sepanjang waktu.</string>
    <string name="floating_access_request">Smartfishing membutuhkan akses untuk minimize system.</string>
    <string name="are_you_use_minimize_mode">Apkah anda akan menggunakan tampilan minimize</string>
    <string name="empty_logbook">Tidak ada data Logbook</string>
    <string name="empty_dpi">Tidak ada data DPI</string>
    <string name="empty_location">Tidak ada data lokasi Tersimpan</string>
    <string name="check_version_app">Cek Versi Aplikasi..</string>
    <string name="version_app_uptodate">Versi Aplikasi #X1 sudah terbaru</string>
    <string name="new_version">Versi terbaru</string>
    <string name="new_version_app">Versi terbaru Smartfishing #X1 \n #X2</string>
    <string name="upgrade4_text_title" >Memuat Aplikasi Baru</string>
    <string name="download_finish" >Apk Download</string>
    <string name="download_apk_desc" >File APK berhasil di download. File Apk tersimpan di #X1.\nInstall Apk sekarang?</string>
    <string name="premium" >Premium</string>
    <string name="free" >Free</string>
    <string name="share_location" >Bagikan Lokasi</string>
    <string name="edit_picture" >Ubah Foto</string>
    <string name="select_picture" >Ambil Gambar</string>
</resources>