<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnly_item"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:weightSum="10"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txvw_title"
        android:text="Item Here"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_standard"
        android:layout_weight="4.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txvw_degree"
        android:text="@string/xb0"
        android:background="@drawable/bg_editext_default"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/text_standard"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/txvw_minutes"
        android:text="@string/symbol_minutes"
        android:background="@drawable/bg_editext_default"
        android:textSize="19sp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:textColor="@color/text_standard"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/txvw_seconds"
        android:text="@string/symbol_seconds"
        android:background="@drawable/bg_editext_default"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/text_standard"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>